sqlite: deal with g_date_time_new_from_unix_utc() failing

https://bugs.freedesktop.org/show_bug.cgi?id=69715